--- a/.github/workflows/jvm.yml
+++ b/.github/workflows/jvm.yml
@@ -18,4 +18,4 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'gradle'
-      - run: ./gradlew build --no-daemon
+      - run: ./gradlew build jacocoTestReport --no-daemon
