--- a/.github/workflows/jvm.yml
+++ b/.github/workflows/jvm.yml
@@ -18,4 +18,16 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'gradle'
-      - run: ./gradlew build jacocoTestReport --no-daemon
+      - run: ./gradlew jacocoTestReport --no-daemon
+      - name: Analyze on sonar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args:
+            -Dsonar.projectKey=lpicanco_knostr
+            -Dsonar.organization=lpicanco
+            -Dsonar.scm.provider=git
+            -Dsonar.junit.reportPaths=build/test-results/test
+            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+        run: ./gradlew jacocoTestReport sonarqube --info --no-daemon
