--- a/.github/workflows/jvm.yml
+++ b/.github/workflows/jvm.yml
@@ -34,8 +34,7 @@ jobs:
             -Dsonar.scm.provider=git
             -Dsonar.junit.reportPaths=build/test-results/test
             -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
-            # Comma-separated paths to directories containing main source files.
-            #-Dsonar.sources= # optional, default is project base directory
+            -Dsonar.sources=src/main/kotlin
             # When you need the analysis to take place in a directory other than the one from which it was launched
             #-Dsonar.projectBaseDir= # optional, default is .
           # Comma-separated paths to directories containing test source files.
