configuration and index

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,11 @@ micronaut:
   application:
     name: knostr
   server:
-    idle-timeout: 30m
     cors:
       enabled: true
+    idle-timeout: 45m
+    read-idle-timeout: 45m
+    write-idle-timeout: 45m
   metrics:
     enabled: true
   otel:
@@ -28,8 +30,8 @@ jpa:
   default:
     properties:
       hibernate:
-        show_sql: true
-        format_sql: true
+        show_sql: false
+        format_sql: false
 
 logger:
   levels:
